Did some QA, fixed design, added favicon  and made links open in new tab

--- a/src/index.html
+++ b/src/index.html
@@ -18,5 +18,5 @@ regenerate: true
     {% endfor %}
   </ul>
 
-  <p class="rss-subscribe">subscribe <a href="{{ "feed.xml" }}">via RSS</a></p>
+  <p class="rss-subscribe">Subscribe <a href="{{ "feed.xml" }}" target="_blank">via RSS</a></p>
 </div>
